--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>html5 file title</title>
+    <link rel="stylesheet" href="./css/milligram.css">
 </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="./dist/index.js"></script>
+<script type="text/javascript" src="./build/index.js"></script>
 </body>
 </html>
