--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>html5 file title</title>
     <link rel="stylesheet" href="./css/milligram.css">
+    <style>
+        #root{width:80%;margin:20px auto}
+    </style>
 </head>
 <body>
 <div id="root"></div>
