--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <title>html5 file title</title>
     <style>
         #root{width:80%;margin:20px auto}
+        .play{border:1px solid #ccc;padding:10px;margin-bottom:20px;border-radius:3px;background:#f8f8f8}
     </style>
 </head>
 <body>
