--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>html5 file title</title>
+    <link rel="stylesheet" href="./build/index.css">
     <style>
         #root{width:80%;margin:20px auto}
         .play{border:1px solid #ccc;padding:10px;margin-bottom:20px;border-radius:3px;background:#f8f8f8}
