--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>html5 file title</title>
+    <script nomodule src="https://cdn.polyfill.io/v2/polyfill.min.js">alert('只有IE才加载');</script>
     <link rel="stylesheet" href="./build/index.css">
     <style>
         #root{width:80%;margin:20px auto}
