--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
         .play{border:1px solid #ccc;padding:10px;margin-bottom:20px;border-radius:3px;background:#f8f8f8}
     </style>
 </head>
-<body>
+<body unselectable="on">
 <div id="root"></div>
 <script type="text/javascript" src="./build/index.js"></script>
 </body>
